--- a/src/email_templates/project_reffer_usernot.ejs
+++ b/src/email_templates/project_reffer_usernot.ejs
@@ -416,9 +416,9 @@
                                                 </div>
                                             </div>
                                             <div style="width:100%;padding:14px 0px 14px;text-align:left;">
-                                                <a href="http://18.141.230.170//#/<?= model.refer_id ?>" style="font-family:Arial;font-size:13px;font-weight:bold;font-stretch:normal;font-style:normal;line-height:50px;letter-spacing:0.26px;color:#fff;text-align:center;text-decoration:none;display:block;width:180px;height:49px;border-radius:6.5px;background-color:#ff062f;margin: 0 auto;">Click to Register</a>
+                                                <a href="https://collegey.com/#/<?= model.refer_id ?>" style="font-family:Arial;font-size:13px;font-weight:bold;font-stretch:normal;font-style:normal;line-height:50px;letter-spacing:0.26px;color:#fff;text-align:center;text-decoration:none;display:block;width:180px;height:49px;border-radius:6.5px;background-color:#ff062f;margin: 0 auto;">Click to Register</a>
                                                 
-                                                <a href="http://18.141.230.170//student-dashboard/<?= model.refer_id ?>" style="font-family:Arial;font-size:13px;font-weight:bold;font-stretch:normal;font-style:normal;line-height:50px;letter-spacing:0.26px;color:#fff;text-align:center;text-decoration:none;display:block;width:180px;height:49px;border-radius:6.5px;background-color:#3F89FC;margin: 10px auto;">join Project</a>
+                                                <a href="https://collegey.com/student-dashboard/<?= model.refer_id ?>" style="font-family:Arial;font-size:13px;font-weight:bold;font-stretch:normal;font-style:normal;line-height:50px;letter-spacing:0.26px;color:#fff;text-align:center;text-decoration:none;display:block;width:180px;height:49px;border-radius:6.5px;background-color:#3F89FC;margin: 10px auto;">join Project</a>
 
                                             </div>
                                             <div style="padding:0;text-align:left;padding-top: 20px;">
