--- a/src/email_templates/invite_user_share_email.ejs
+++ b/src/email_templates/invite_user_share_email.ejs
@@ -424,7 +424,7 @@
                                                 </div>
                                             </div>
                                             <div style="width:100%;padding:14px 0px 14px;text-align:left;">
-                                                <a href="http://18.141.230.170//resetPassword/<?= model.user_id ?>" style="font-family:Arial;font-size:13px;font-weight:bold;font-stretch:normal;font-style:normal;line-height:50px;letter-spacing:0.26px;color:#fff;text-align:center;text-decoration:none;display:block;width:180px;height:49px;border-radius:6.5px;background-color:#ff062f">Reset Password</a>
+                                                <a href="https://collegey.com/resetPassword/<?= model.user_id ?>" style="font-family:Arial;font-size:13px;font-weight:bold;font-stretch:normal;font-style:normal;line-height:50px;letter-spacing:0.26px;color:#fff;text-align:center;text-decoration:none;display:block;width:180px;height:49px;border-radius:6.5px;background-color:#ff062f">Reset Password</a>
                                             </div>
                                             <div style="padding:0;text-align:left;padding-top: 20px;">
                                                 <p style="font-family: Arial;font-size: 16px;font-weight: normal;font-stretch: normal;font-style: normal;line-height: 1.25;letter-spacing: 0.32px;text-align: left;color: #000000;margin-bottom: 0;">Best Wishes<br> Team Collegey</p>
