--- a/src/email_templates/invite_admin_share_email.ejs
+++ b/src/email_templates/invite_admin_share_email.ejs
@@ -415,16 +415,16 @@
                                                     <p style="font-family: Arial;font-size: 14px;font-weight: normal;font-stretch: normal;font-style: normal;line-height: 1.57;letter-spacing: 0.28px;text-align: left;color: #000000;margin-top:0;margin-bottom:0px;"><?= model.email ?></p>
                                                 </div>
                                             </div>
-                                            <div style="width:100%;padding:14px 0px 14px;text-align:left;border-bottom: 1.5px solid rgba(0, 0, 0, 0.1);">
+                                            <!-- <div style="width:100%;padding:14px 0px 14px;text-align:left;border-bottom: 1.5px solid rgba(0, 0, 0, 0.1);">
                                                 <div class="image-box" style="display:inline-block;width:22%;padding:0;text-align:left;vertical-align: top;">
                                                     <p style="font-family: Arial;font-size: 14px;font-weight: bold;font-stretch: normal;font-style: normal;line-height: 1.57;letter-spacing: 0.28px;text-align: left;color: #000000;margin-top:0;margin-bottom:0px;">Password:</p>
                                                 </div>
                                                 <div class="description-box" style="display:inline-block;width:77%;padding:0;text-align:left;">
                                                     <p style="font-family: Arial;font-size: 14px;font-weight: normal;font-stretch: normal;font-style: normal;line-height: 1.57;letter-spacing: 0.28px;text-align: left;color: #000000;margin-top:0;margin-bottom:0px;"><?= model.password ?></p>
                                                 </div>
-                                            </div>
+                                            </div> -->
                                             <div style="width:100%;padding:14px 0px 14px;text-align:left;">
-                                                <a href="https://collegey.com/resetPassword/<?= model.user_id ?>" style="font-family:Arial;font-size:13px;font-weight:bold;font-stretch:normal;font-style:normal;line-height:50px;letter-spacing:0.26px;color:#fff;text-align:center;text-decoration:none;display:block;width:180px;height:49px;border-radius:6.5px;background-color:#ff062f">Reset Password</a>
+                                                <a href="https://admin1.collegey.com/login" style="font-family:Arial;font-size:13px;font-weight:bold;font-stretch:normal;font-style:normal;line-height:50px;letter-spacing:0.26px;color:#fff;text-align:center;text-decoration:none;display:block;width:180px;height:49px;border-radius:6.5px;background-color:#ff062f">Login As Admin</a>
                                             </div>
                                             <div style="padding:0;text-align:left;padding-top: 20px;">
                                                 <p style="font-family: Arial;font-size: 16px;font-weight: normal;font-stretch: normal;font-style: normal;line-height: 1.25;letter-spacing: 0.32px;text-align: left;color: #000000;margin-bottom: 0;">Best Wishes<br> Team Collegey</p>
