--- a/src/email_templates/invite_new_friend.ejs
+++ b/src/email_templates/invite_new_friend.ejs
@@ -407,6 +407,9 @@
                                     </div>
                                     <div style="width:100% !important;box-sizing: border-box;padding:10px;" class="border-none ">
                                         <div class="box-padding mailer-content" style="padding:38px 30px 29px 25px;background-color:#FFF;border-radius: 0;border: 0;">
+                                            
+                                            <p class="password-request" style="font-family: Arial;font-size: 16px;font-weight: normal;font-stretch: normal;font-style: normal;line-height: 1.63;letter-spacing: 0.32px;text-align: left;color: #000000;margin-top:0;margin-bottom:30px;"><?= model.templateData.email_content ?></p>
+                                            
                                             <div style="width:100%;padding:14px 0px 14px;text-align:left;">
                                                 <a href="javascript:;" style="font-family:Arial;font-size:13px;font-weight:bold;font-stretch:normal;font-style:normal;line-height:50px;letter-spacing:0.26px;color:#fff;text-align:center;text-decoration:none;display:block;width:180px;height:49px;border-radius:6.5px;background-color:#ff062f">Invite By <?= model.templateData.inviteByCollegey ?></a>
                                             </div>
