--- a/src/email_templates/mentor_request_submit.ejs
+++ b/src/email_templates/mentor_request_submit.ejs
@@ -407,6 +407,9 @@
                                     </div>
                                     <div style="width:100% !important;box-sizing: border-box;padding:10px;" class="border-none ">
                                         <div class="box-padding mailer-content" style="padding:38px 30px 29px 25px;background-color:#FFF;border-radius: 0;border: 0;">
+                                            
+                                            <p class="password-request" style="font-family: Arial;font-size: 16px;font-weight: normal;font-stretch: normal;font-style: normal;line-height: 1.63;letter-spacing: 0.32px;text-align: left;color: #000000;margin-top:0;margin-bottom:30px;"><?= model.templateData.email_content ?></p>                                            
+
                                             <div style="padding:0;text-align:left;padding-top: 20px;">
                                                 <p style="font-family: Arial;font-size: 16px;font-weight: normal;font-stretch: normal;font-style: normal;line-height: 1.25;letter-spacing: 0.32px;text-align: left;color: #000000;margin-bottom: 0;">Best Wishes<br> Team Collegey</p>
                                             </div>
