--- a/src/email_templates/new_project_add.ejs
+++ b/src/email_templates/new_project_add.ejs
@@ -407,6 +407,9 @@
                                     </div> 
                                     <div style="width:100% !important;box-sizing: border-box;padding:10px;" class="border-none ">
                                         <div class="box-padding mailer-content" style="padding:38px 30px 29px 25px;background-color:#FFF;border-radius: 0;border: 0;">
+
+                                            <p class="password-request" style="font-family: Arial;font-size: 16px;font-weight: normal;font-stretch: normal;font-style: normal;line-height: 1.63;letter-spacing: 0.32px;text-align: left;color: #000000;margin-top:0;margin-bottom:30px;"><?= model.templateData.email_content ?></p>
+                                            
                                             <div style="width:100%;padding:14px 0px 14px;text-align:left;border-bottom: 1.5px solid rgba(0, 0, 0, 0.1);">
                                                 <div class="image-box" style="display:inline-block;width:22%;padding:0;text-align:left;vertical-align: top;">
                                                     <p style="font-family: Arial;font-size: 14px;font-weight: bold;font-stretch: normal;font-style: normal;line-height: 1.57;letter-spacing: 0.28px;text-align: left;color: #000000;margin-top:0;margin-bottom:0px;">Project Name:</p>
