--- a/src/email_templates/send_recommendation_template.ejs
+++ b/src/email_templates/send_recommendation_template.ejs
@@ -402,7 +402,7 @@
                                     <div style="width:100% !important;box-sizing: border-box;padding:0px 35px; background-image:url(<?= config.MAILER_IMAGE_PATH ?>/welcome-bg.png);background-repeat: no-repeat;background-size: cover;max-width:600px;height: 177px;border-radius: 5px 5px 5px 0;" class="border-none welcome-bg">
                                         <div class="welcome-bg-inner" style="width:100%;padding:70px 0 0;">
                                             <p style="font-size: 16px;font-weight: bold;line-height: 1;letter-spacing: 0.64px;text-align: left;color:#fff;margin-top: 0;margin-bottom:12px;">Hi,</p>
-                                            <p class="welcome-bg-p" style="font-size: 33px;font-weight: bold;line-height: 0.8;letter-spacing: 0.64px;text-align: left;color:#fff;margin-top: 0;margin-bottom:0;">Your request has been submitted</p>
+                                            <p class="welcome-bg-p" style="font-size: 33px;font-weight: bold;line-height: 0.8;letter-spacing: 0.64px;text-align: left;color:#fff;margin-top: 0;margin-bottom:0;">Your recommendation request is sent successfully</p>
                                         </div>
                                     </div> 
                                     <div style="background-color:#eaeeef;">
