--- a/src/email_templates/invite_user_reject_invitejoin_email.ejs
+++ b/src/email_templates/invite_user_reject_invitejoin_email.ejs
@@ -402,11 +402,14 @@
                                     <div style="width:100% !important;box-sizing: border-box;padding:0px 35px; background-image:url(<?= config.MAILER_IMAGE_PATH ?>/welcome-bg.png);background-repeat: no-repeat;background-size: cover;max-width:600px;height: 177px;border-radius: 5px 5px 5px 0;" class="border-none welcome-bg">
                                         <div class="welcome-bg-inner" style="width:100%;padding:70px 0 0;">
                                             <p style="font-size: 16px;font-weight: bold;line-height: 1;letter-spacing: 0.64px;text-align: left;color:#fff;margin-top: 0;margin-bottom:12px;">Hi,</p>
-                                            <p class="welcome-bg-p" style="font-size: 33px;font-weight: bold;line-height: 0.8;letter-spacing: 0.64px;text-align: left;color:#fff;margin-top: 0;margin-bottom:0;">your request is reject</p>
+                                            <p class="welcome-bg-p" style="font-size: 33px;font-weight: bold;line-height: 0.8;letter-spacing: 0.64px;text-align: left;color:#fff;margin-top: 0;margin-bottom:0;"><?= model.templateData.email_top_header_text ?></p>
                                         </div>
                                     </div>
                                     <div style="width:100% !important;box-sizing: border-box;padding:10px;" class="border-none ">
                                         <div class="box-padding mailer-content" style="padding:38px 30px 29px 25px;background-color:#FFF;border-radius: 0;border: 0;">
+
+                                            <p class="password-request" style="font-family: Arial;font-size: 16px;font-weight: normal;font-stretch: normal;font-style: normal;line-height: 1.63;letter-spacing: 0.32px;text-align: left;color: #000000;margin-top:0;margin-bottom:30px;"><?= model.templateData.email_content ?></p>
+                                            
                                             <div style="width:100%;padding:14px 0px 14px;text-align:left;border-bottom: 1.5px solid rgba(0, 0, 0, 0.1);">
                                                 <div class="image-box" style="display:inline-block;width:22%;padding:0;text-align:left;vertical-align: top;">
                                                     <p style="font-family: Arial;font-size: 14px;font-weight: bold;font-stretch: normal;font-style: normal;line-height: 1.57;letter-spacing: 0.28px;text-align: left;color: #000000;margin-top:0;margin-bottom:0px;">Name:</p>
